--- a/templates/boxoffice/boxoffice_cart.html
+++ b/templates/boxoffice/boxoffice_cart.html
@@ -83,7 +83,11 @@
                   <dt>Totale:</dt>
                   <dd class="text-right text-dark b"><strong>€ {{total|stringformat:".2f"}}</strong></dd>
                 </dl>
-                <a href="{%url 'boxoffice_print' event.id%}" class="btn btn-primary btn-block"> Stampa biglietti </a>
+                <dl  class="dlist-align">
+                {%for method in payments_methods %}
+                    <a href="{%url 'boxoffice_print' event.id method.id%}"><button type="button" class="btn btn-primary btn-lg btn-block"> {{method.name}}</button> </a>
+                    {%endfor%}
+                </dl>
             </div> <!-- card-body.// -->
             </div> <!-- card.// -->
     
