--- a/templates/boxoffice/boxoffice_main.html
+++ b/templates/boxoffice/boxoffice_main.html
@@ -72,23 +72,33 @@
         <div class="card example-1 scrollbar-ripe-malinka">
             <table class="table table-hover table-sm">
                 <thead class="thead" aria-colspan="3"> Prenotazioni.</thead>
-                <th>Nome prenotazione</th>
-                <th>Posti</th>
+                <th>Email</th>
+                <th>Ordine</th>
                 <th>Vendita</th>
                 <th>Modifica</th>
 
                 <tbody>
-                    {%for user_event in users_event%}
+                    {%for email, event_orders in orders.items%}
                         <tr>
                             
-                            <td>{{user_event.user.last_name}} {{user_event.user.first_name}}</td>
-                            <td>{{user_event.seats_price}}</td>
+                            <td>{{email}} </td>
                             <td>
-                                <a href="{%url 'sell_booking' user_event.pk%}" >
-                                    <button type="button" class="btn btn-primary btn-sm"><i class='fas fa-euro-sign'></i></i></button>
-                                </a>
+                                <table>
+                                        {%for order in event_orders%}
+                                        <tr>
+                                            <td>
+                                                {{order}}
+                                            </td>
+                                            <td>
+                                                <a href="{%url 'sell_booking' order%}" >
+                                                    <button type="button" class="btn btn-primary btn-sm"><i class='fas fa-euro-sign'></i></i></button>
+                                                </a>
+                                            </td>
+                                            <td><button type="button" class="btn btn-warning btn-sm"><i class='far fa-edit'></i></button></td>
+                                        </tr>
+                                        {%endfor%}
+                                </table>
                             </td>
-                            <td><button type="button" class="btn btn-warning btn-sm"><i class='far fa-edit'></i></button></td>
                         </tr>
                     {%endfor%}
                     
