--- a/templates/booking/booking_complete.html
+++ b/templates/booking/booking_complete.html
@@ -95,7 +95,7 @@
                                             <tfoot>
                                                 <tr>
                                                     <th colspan="1" class="text-right">Totale da pagare:</th>
-                                                    <td class="text-center"> {{ payment.amount_paid }} Euro</td>
+                                                    <td class="text-center"> {{ order.order_total }} Euro</td>
                                                 </tr>
                                             <tr>
                                                 <th colspan="1" class="text-right">Metodi pagamento:</th>
